[package]
name = "f-trak"
version = "0.1.0"
authors = ["Payne325 <alex.payne325@gmial.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = {version = "0.46.3", default-features = false, features = ["opencv-4", "buildtime-bindgen"]}