[package]
name = "f-trak"
version = "0.2.0"
authors = ["Payne325 <https://github.com/Payne325>"]
edition = "2018"
license-file = "../LICENSE"
readme = "../README.md"
homepage = "https://github.com/Payne325/f-trak"
repository = "https://github.com/Payne325/f-trak"
keywords = ["face-detection", "vision", "computer-vision"]
description = "A neural network based face detection program that tracks face movement in screen space."

[dependencies]
opencv = { version = "0.83.0" }